--- a/index.html
+++ b/index.html
@@ -45,5 +45,27 @@
         </div>
      </header>
 
+      <!-- SITE-HEADER -->
+
+      <!-- SITE-HERO -->
+
+      <div class="site-hero">
+        <img src="./img/kong_skull_island 1.png" alt="Site header bg banner" class="site-hero__banner">
+        <div class="site-hero__content">
+            <div class="container">
+                <h1 class="site-hero__title">Kong: Skull Island</h1>
+                <p class="site-hero__desc">The film takes the viewer to the 70s of the last century. The protagonist organizes an expedition to the Skull island, always covered in fog, on which King Kong was once caught to find the missing brother and some mysterious substance. During...</p>
+                <div class="site-hero__button">
+                    <a href="#!" class="site-hero_btn all-btn">Watch now</a>
+                    <a href="#!" class="site-hero_btn all-btn">Download</a>
+                </div>
+            </div>
+        </div>
+      </div>
+
+      <!-- SITE-HERO -->
+      
+    
+
 </body>
 </html>
